# notme-python

./: .dockerignore  .env  .gitignore  .python-version  Dockerfile  Dockerfile.aws  Makefile  cli.py  conftest.py  context.py  database.py  docker-compose-memgraph.yml  docker-compose-neo4j.yml  docker-compose-redpanda.yml  docker-compose-vector.yml  dot_init.py  log.py  main-api.py  main-ws.py  main.py  main_api.py  main_shared.py  main_ws.py  py-cli  pyproject.toml  pytest.ini  readme.md  requirements.txt  stats_init.py
actors/: create.py  factory.py  source.py
actors/chess/: app.py
actors/crypto/: app.py
actors/example/: app.py
actors/handlers/: generic.py
ansible/: playbook.yml
ansible/inventories/: hosts
c/: db-cli  db_cli_boot.py  db_cli_entity.py  graph-cli  graph_cli_boot.py  graph_cli_constraints.py  graph_cli_indexes.py  graph_cli_match.py  graph_cli_sync.py  msg-cli  msg_cli_listen.py  msg_cli_publish.py  places-cli  timely_cdr_ds_import.py  timely_cdr_ta_import.py  timely_entity_import.py  timely_user_import.py
data/apps/: chess.toml  crypto.toml  example.toml
data/graph/: connections.toml
data/sotu/: sotu_2023.txt
docker/: readme.sh
docker-compose/: notme-authentik.yml  notme-datadog.yml  notme-ksql.yml  notme-neo4j-cluster-add-2  notme-neo4j-cluster-boot  notme-neo4j-cluster-destroy  notme-neo4j.yml  notme-postgres.yml  notme-redpanda.yml  notme-typesense.yml
docker/notme-postgres/: Dockerfile  init.sh
docker/notme-redpanda/: Dockerfile
dog/: init.py
gql/: query.py  types.py
k8s-dev/neo4j/: kustomization.yml  neo4j-deploy.yml
k8s-dev/otel/: kustomization.yml  otel-deployment.yml  otel-service.yml
k8s-dev/postgres/: kustomization.yml  postgres-deploy.yml
k8s-dev/redpanda/: kustomization.yml  redpanda-deploy.yml
k8s-dev/scripts/: minikube_boot
k8s-dev/supervisor/: supervisor.minikube.conf
k8s-dev/typesense/: kustomization.yml  typesense-deploy.yml
k8s/base-usr/: kustomization.yml
k8s/base_usr/: kustomization.yml  nats.yml  rpk.yml
k8s/deploy-not/: kustomization.yml
k8s/deploy_usr/: kustomization.yml
k8s/scripts/: minikube_fwd
k8s/sys/: kustomization.yml  neo4j-deploy.yml  otel-agent-configmap.yml  otel-collector.props.sample.yml  otel-deployment.yml  otel-service.yml  postgres-deploy.yml  redpanda-deploy.yml  typesense-deploy.yml
kafka/: __init__.py  config.py  consumer.py  handler.py  reader.py  scheduler.py  service_check.py  types.py  writer.py
kafka/handlers/: generic.py
keys/: keys.toml
models/: __init__.py  actor.py  actor_log.py  actor_message.py  category.py  city.py  corpus.py  credential.py  data_link.py  data_mapping.py  data_model.py  data_node.py  entity.py  entity_location.py  entity_match.py  entity_watch.py  event.py  graph_connection_entity.py  kafka_message.py  memgraph_connection.py  node_image.py  node_text.py  product.py  socket_manager.py  user.py  variant.py  variant_prule.py  variant_prule_document.py  variant_prule_schema.py  variant_vrule.py  variant_vrule_document.py  variant_vrule_schema.py  vendor.py  vendor_stock_location.py  work_queue.py
neo/: service_check.py
network/: ping.py
proto/: chess.proto  chess_client.py  chess_pb2.py  chess_pb2_grpc.py  chess_server.py  stream.proto  stream_client.py  stream_pb2.py  stream_pb2_grpc.py  stream_server.py  unary.proto  unary_client.py  unary_pb2.py  unary_pb2_grpc.py  unary_server.py  user.proto  user_pb2.py
routers/: 500.html  __init__.py  admin.py  admin_corpus.py  admin_fs.py  admin_workq.py  base.html  health.py  images.py  me.py  rag.py  users.py
routers/admin/: workq_list.html
routers/images/: index.html
routers/me/: base.html
routers/rag/: base.html  corpus_list.html  corpus_show.html  corpuses.html  fs.html  fs_list.html  query.html  query_fragment.html  rag.html
runners/: chess-curio-sink.py  chess-curio-source.py  chess-kafka-client.py  chess-kafka-server.py  chess-zero-filter.py  chess-zero-sink.py  chess-zero-source.py  crypto-client.py  crypto-console.py  crypto-server.py  db-cli.py  graph-cli.py  memgraph-cli  memgraph-cli.py  noise-client.py  noise-server.py  py-cli  py-cli.py  rpc-server.py  ws-console.py
scripts/: airflow-postgres  chess-client  chess-server  chess-unix  crypto  crypto-client  crypto-server  db-shell  docker-bootstrap  docker-compose-init  graph-shell  kafka-restart  neo4j-cluster-init  orbstack-init  py-api  py-cli  service-checks  ws-console  ws-server
scripts/ai/: ai-docs-qa  corpus-utils  haystack-docs-example  haystack-hf-example  haystack-rag-example  hf-example  hf-rag-example  langchain-rag-1  langchain-rag-2  milvus-utils  wiki-utils
scripts/db/: db-backup  db_snapshot
scripts/flows/: biotrack_dw_load  biotrack_export  biotrack_source_download  biotrack_warehouse_load  db_dump  rp_up
scripts/grpc/: grpc-compile
scripts/ksql/: user-example-readme
scripts/loclx/: tunnel-api
scripts/minikube/: minikube_boot  minikube_check  minikube_fwd
scripts/neo/: neo-read-limit  neo-read-random  neo-shell  neo-write-version
scripts/openid/: authentik-auth  google-auth
scripts/prefect/: rp_up_flow
scripts/snaplet/: snapshot_capture  snapshot_compress  snapshot_restore  snapshot_uncompress
supervisor/: supervisor.check_service.conf
templates/: base.html  me.html
test/: entity_factory.py  test_sample.py
timely/: chess.py  entity_import.py  wordcount  wordcount.py
tty/: chess-curio-sink  chess-curio-sink.py  chess-curio-source  chess-curio-source.py  chess-kafka-client  chess-kafka-client.py  chess-kafka-server  chess-kafka-server.py  chess-zero-filter  chess-zero-filter.py  chess-zero-sink  chess-zero-sink.py  chess-zero-source  chess-zero-source.py  crypto-client  crypto-client.py  crypto-console  crypto-console.py  crypto-server  crypto-server.py  db-boot  db-cli  db-cli.py  graph-boot  graph-cli  graph-cli.py  graph_cli_indexes.py  graph_cli_match.py  memgraph-cli.py  noise-client  noise-client.py  noise-server  noise-server.py  py-cli  py-cli.py  rpc-server  rpc-server.py  ws-console  ws-console.py
typesearch/: __init__.py  client.py
(+461 files in other folders)
