[tool.poetry]
name = "py-fastapi"
version = "0.1.0"
description = ""
authors = ["Sanjay Kapoor <sanjay@jarna.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aioconsole = "^0.4.1"
asyncio = "^3.4.3"
coloredlogs = "^15.0.1"
cryptography = "^36.0.2"
curio = "^1.5"
fastapi = "^0.75.2"
noiseprotocol = "^0.3.1"
pymgclient = "^1.2.1"
python-dotenv = "^0.20.0"
pyzmq = "^22.3.0"
sqlmodel = "^0.0.6"
toml = "^0.10.2"
typer = "^0.4.1"
ulid-py = "^1.1.0"
uvicorn = "^0.17.6"
uvloop = "^0.16.0"
websocket = "^0.2.1"
zerorpc = "^0.6.3"
confluent-kafka = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
