[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E402"]

line-length = 180

[tool.ruff.isort]
force-sort-within-sections = true
order-by-type = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.poetry]
name = "notme-python"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Sanjay Kapoor <notsanjaykapoor@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry add $(cat requirements"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
accelerate = "0.28.0"
aioconsole = "0.4.1"
aiosqlite = "0.19.0"
alembic = "1.8.1"
anyio = "3.5.0"
appnope = "0.1.3"
apprise = "1.2.0"
arize-phoenix = "3.24.0"
asgi-lifespan = "2.0.0"
asgiref = "3.5.0"
asn1crypto = "1.5.1"
asttokens = "2.0.5"
asyncio = "3.4.3"
asyncpg = "0.27.0"
attrs = "21.4.0"
backcall = "0.2.0"
backports-cached-property = "1.0.1"
black = "^24.4.2"
bytewax = "0.18.1"
cachetools = "5.2.0"
cbor2 = "^5.6.3"
certifi = "2023.7.22"
cffi = "1.15.0"
charset-normalizer = "^3.3.2"
click = "8.1.3"
cloudpickle = "2.2.0"
colorama = "0.4.4"
coloredlogs = "15.0.1"
commonmark = "0.9.1"
confluent-kafka = "2.3.0"
connectorx = "0.3.2"
coolname = "2.1.0"
croniter = "1.3.8"
cryptography = "^42.0.7"
curio = "1.5"
decorator = "5.1.1"
dill = "0.3.5.1"
docker = "5.0.3"
executing = "0.8.3"
factory-boy = "^3.3.0"
faiss-cpu = "1.8.0"
faker = "13.15.1"
fastapi = "0.109.1"
flake8 = "4.0.1"
fsspec = "2024.3.1"
future = "0.18.3"
geoalchemy2 = "^0.15.1"
gevent = "23.9.1"
google-api-python-client = "2.90.0"
google-auth = "2.15.0"
google-cloud-vision = "3.4.3"
gpt4all = "2.5.1"
graphql-core = "3.2.1"
greenlet = "3.0.3"
griffe = "0.24.1"
grpcio = "1.60.0"
grpcio-tools = "1.60.0"
h11 = "0.13.0"
h2 = "4.1.0"
hpack = "4.0.0"
httpcore = "0.16.2"
httpx = "0.23.1"
huggingface-hub = "^0.23.0"
humanfriendly = "10.0"
hyperframe = "6.0.1"
idna = "^3.7"
iniconfig = "1.1.1"
ipdb = "0.13.9"
ipython = "8.10.0"
isort = "5.10.1"
itsdangerous = "2.1.2"
jedi = "0.18.1"
jinja2 = "3.1.3"
jsonpatch = "1.33"
jsonpointer = "2.3"
kubernetes = "25.3.0"
langchain = "0.1.12"
langchain-community = "0.0.28"
langchain-openai = "0.1.3"
langchainhub = "0.1.15"
llama-index = "0.10.27"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-readers-web = "^0.1.14"
llama-index-storage-docstore-postgres = "^0.1.3"
llama-index-storage-index-store-postgres = "^0.1.3"
llama-index-vector-stores-milvus = "^0.1.12"
mako = "1.2.4"
markdown = "3.4.1"
markupsafe = "2.1.1"
matplotlib-inline = "0.1.3"
mccabe = "0.6.1"
msgpack = "1.0.3"
msgpack-python = "0.5.6"
multidict = "6.0.2"
multiprocess = "0.70.13"
mypy = "0.960"
mypy-extensions = "0.4.3"
neo4j = "4.4.4"
noiseprotocol = "0.3.1"
oauthlib = "3.2.2"
openpyxl = "3.1.2"
orjson = "3.10.1"
packaging = "23.2"
parso = "0.8.3"
pathspec = "0.9.0"
pendulum = "2.1.2"
pexpect = "4.8.0"
pgvector = "^0.2.5"
pickleshare = "0.7.5"
platformdirs = "2.5.2"
pluggy = "1.0.0"
polars = "0.16.8"
prompt-toolkit = "3.0.43"
protobuf = "4.23.3"
psycopg2-binary = "2.9.4"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "14.0.1"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycodestyle = "2.8.0"
pycparser = "2.21"
pydantic = "^2.7.1"
pyflakes = "2.4.0"
pygments = "2.15.0"
pymilvus = "^2.4.2"
pyopenssl = "^24.1.0"
pyparsing = "3.0.9"
pytest = "7.2.0"
pytest-asyncio = "0.18.3"
pytest-mock = "3.7.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "^0.0.9"
python-slugify = "7.0.0"
pytz = "2022.6"
pytzdata = "2020.1"
pyyaml = "6.0.1"
pyzmq = "25.1.2"
readchar = "4.0.3"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
resolvelib = "0.8.1"
rfc3986 = "1.5.0"
rich = "12.6.0"
rsa = "4.9"
shapely = "1.8.2"
shellingham = "1.4.0"
six = "1.16.0"
sniffio = "1.2.0"
sqlalchemy = "^2.0.30"
sqlalchemy-utils = "^0.41.2"
sqlalchemy2-stubs = "0.0.2a21"
sqlmodel = "^0.0.18"
stack-data = "0.2.0"
starlette = "0.35.1"
strawberry-graphql = "0.208.2"
text-unidecode = "1.3"
toml = "0.10.2"
tomli = "2.0.1"
torch = "2.2.2"
traitlets = "5.2.1.post0"
transformers = "4.39.1"
typer = "0.7.0"
types-toml = "0.10.7"
typesense = "0.14.0"
ulid = "1.1"
ulid-py = "1.1.0"
unstructured = "^0.13.6"
urllib3 = "1.26.18"
uvicorn = "0.17.6"
uvloop = "0.19.0"
wcwidth = "0.2.5"
webauthn = "^2.1.0"
websocket = "0.2.1"
websocket-client = "1.3.3"
websockets = "10.4"
xeger = "0.3.5"
zerorpc = "0.6.3"
zope-event = "4.5.0"
zope-interface = "5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
